slider bottom and top spacing is solved

--- a/src/pages/oziva/oziva.scss
+++ b/src/pages/oziva/oziva.scss
@@ -102,7 +102,7 @@
 		margin-top: 5.5em;
 		text-align: center;
 		@include respond-until(sm) {
-			margin-top: 2.9em;
+			margin-top: 3.35em;
 		}
 		.slide {
 			background: #fff;
